--- a/Pipfile
+++ b/Pipfile
@@ -1,25 +1,20 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 flask = "*"
 requests = "*"
 python-dotenv = "*"
 twitterapi = "*"
 zappa = "*"
 
-
 [dev-packages]
-
 ipython = "*"
 ipdb = "*"
-
+pytest = "*"
+"flake8" = "*"
 
 [requires]
-
 python_version = "3.6"
