make a directory for dynamodb local instance

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ install: "make"
 
 before_script:
   - wget http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz -O /tmp/dynamodb_local_latest.tar.gz
-  - tar -xzf /tmp/dynamodb_local_latest.tar.gz -C /tmp/dynamodb
+  - mkdir /tmp/dynamodb/
+  - tar -xzf /tmp/dynamodb_local_latest.tar.gz -C /tmp/dynamodb/
 
 script:
   - make test
