--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ ipython = "*"
 requests-mock = "*"
 blinker = "*"
 pytest-dynamodb = "*"
-pytest-cov = "*"
+python-coveralls = "*"
 
 [requires]
 python_version = "3.6.6"
