--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ env:
     - TWITTER_CONSUMER_SECRET=bar
     - TWITTER_ACCESS_TOKEN=whiz
     - TWITTER_ACCESS_TOKEN_SECRET=bang
+    - BOTO3_ACCESS_KEY=itsasecret
+    - BOTO3_SECRET_KEY=ssshhhhhhhhh
+    - BOTO3_REGION=us-east-1
 
 script:
   - make test
