switch non-dev dependencies from setup.py to Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,10 @@ name = "pypi"
 
 [packages]
 "tweets2text" = {editable = true, path = "."}
+flask = "*"
+python-dotenv = "*"
+twitterapi = "*"
+zappa = "*"
 
 [dev-packages]
 "flake8" = "*"
