--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ flask = "*"
 python-dotenv = "*"
 twitterapi = "*"
 zappa = "*"
+urllib3 = ">=1.24.2"
+Jinja2 = ">=2.10.1"
+pyyaml = ">=4.2b1"
 
 [dev-packages]
 "flake8" = "*"
