initial port to django

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,8 @@ venv.bak/
 
 .DS_Store
 
-config/
-
 zappa_settings.json
+secrets.cfg
+
+# need to delete this after initial dev stabilizes
+migrations/
