--- a/Pipfile
+++ b/Pipfile
@@ -4,24 +4,19 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-python-dotenv = "*"
+django = "*"
+django-storages = "*"
 twitterapi = "*"
+psycopg2-binary = "*"
 zappa = "*"
-urllib3 = ">=1.24.2"
-Jinja2 = ">=2.10.1"
-pyyaml = ">=4.2b1"
 
 [dev-packages]
+django-debug-toolbar = "*"
 "flake8" = "*"
 "flake8-docstrings" = "*"
 ipdb = "*"
 ipython = "*"
-requests-mock = "*"
-blinker = "*"
-pytest-dynamodb = "*"
-pytest-cov = "*"
-coveralls = "*"
+python-coveralls = "*"
 
 [requires]
-python_version = "3.6.6"
+python_version = "3.6.8"
