--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-debug-toolbar = "*"
 ipdb = "*"
 ipython = "*"
 python-coveralls = "*"
+requests-mock = "*"
 
 [requires]
 python_version = "3.6.8"
