deployment changes and loading legacy dynamodb data

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ django-storages = "*"
 twitterapi = "*"
 psycopg2-binary = "*"
 zappa = "*"
+boto3 = "==1.9.80"
+botocore = "==1.12.80"
+s3transfer = "==0.1.13"
 
 [dev-packages]
 django-debug-toolbar = "*"
