setup coverage and coveralls

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,15 @@ exclude =
     tweets2text/management/commands/migratefromdynamodb.py
 per-file-ignores =
     config/settings/*.py:F403,F405
+
+[coverage:run]
+include = tweets2text/*.py
+
+omit =
+    tweets2text/tests/*.py
+    tweets2text/migrations/*.py
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    add_introspection_rules
