--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ python:
  - "3.7"
 
 install:
-  pipenv install --dev
+  pipenv sync --dev
 
 addons:
-  postgresql: "9.6"
+  postgresql: "10"
 
 before_script:
   - psql -c 'create database tweets2text;' -U postgres
