--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ python:
  - "3.7"
 
 install:
-  pip install pipenv --upgrade
-  pipenv sync --dev
+  - pip install pipenv --upgrade
+  - pipenv sync --dev
 
 addons:
   postgresql: "10"
@@ -29,9 +29,9 @@ env:
     - TWITTER_ACCESS_TOKEN_SECRET=bang
 
 script:
-  pipenv run coverage run manage.py test --settings "config.settings.test" tweets2text
-  pipenv run coverage report -m
+  - pipenv run coverage run manage.py test --settings "config.settings.test" tweets2text
+  - pipenv run coverage report -m
 
 after_success:
-  pipenv run coveralls
+  - pipenv run coveralls
 
