--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,23 @@ addons:
 
 before_script:
   - psql -c 'create database tweets2text;' -U postgres
+  - touch secrets.cfg
+  - echo '[DEFAULT]' >> secrets.cfg
+  - echo 'django_secret_key = shhh' >> secrets.cfg
+  - echo 'db_name = tweets2text' >> secrets.cfg
+  - echo 'db_user = postgres' >> secrets.cfg
+  - echo 'twitter_consumer_key = foo' >> secrets.cfg
+  - echo 'twitter_consumer_secret = bar' >> secrets.cfg
+  - echo 'twitter_access_token = whiz' >> secrets.cfg
+  - echo 'twitter_access_token_secret = bang' >> secrets.cfg
+  - echo 'twitter_api_env = proddy' >> secrets.cfg
+  - echo 'bot_account_id_str = 1017142357932769280\n' >> secrets.cfg
+  - echo '[local]' >> secrets.cfg
+  - echo 'db_host = localhost' >> secrets.cfg
 
 env:
   global:
     - PIPENV_VERBOSITY=-1
-    - S3_BUCKET_NAME=test-tweets-to-text-downloads
-    - TWITTER_CONSUMER_KEY=foo
-    - TWITTER_CONSUMER_SECRET=bar
-    - TWITTER_ACCESS_TOKEN=whiz
-    - TWITTER_ACCESS_TOKEN_SECRET=bang
 
 script:
   - make test
