--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ exclude =
     tweets2text/management/commands/migratefromdynamodb.py
 per-file-ignores =
     config/settings/*.py:F403,F405
+    tweets2text/constants.py:E501
 
 [coverage:run]
 include = tweets2text/*.py
