--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,42 @@
 dist: xenial
-
 language: python
-
-sudo: True
-
+sudo: true
 cache:
-  - pip
-
+- pip
 python:
- - "3.7"
-
+- '3.7'
 install:
-  - pip install pipenv --upgrade
-  - pipenv sync --dev
-
+- pip install pipenv --upgrade
+- pipenv sync --dev
 addons:
-  postgresql: "10"
-
+  postgresql: '10'
 before_script:
-  - psql -c 'create database tweets2text;' -U postgres
-  - touch secrets.cfg
-  - echo '[DEFAULT]' >> secrets.cfg
-  - echo 'django_secret_key = shhh' >> secrets.cfg
-  - echo 'db_name = tweets2text' >> secrets.cfg
-  - echo 'db_user = postgres' >> secrets.cfg
-  - echo 'twitter_consumer_key = foo' >> secrets.cfg
-  - echo 'twitter_consumer_secret = bar' >> secrets.cfg
-  - echo 'twitter_access_token = whiz' >> secrets.cfg
-  - echo 'twitter_access_token_secret = bang' >> secrets.cfg
-  - echo 'twitter_api_env = proddy' >> secrets.cfg
-  - echo 'bot_account_id_str = 1017142357932769280' >> secrets.cfg
-  - echo '' >> secrets.cfg
-  - echo '[local]' >> secrets.cfg
-  - echo 'db_host = localhost' >> secrets.cfg
-
+- psql -c 'create database tweets2text;' -U postgres
+- touch secrets.cfg
+- echo '[DEFAULT]' >> secrets.cfg
+- echo 'django_secret_key = shhh' >> secrets.cfg
+- echo 'db_name = tweets2text' >> secrets.cfg
+- echo 'db_user = postgres' >> secrets.cfg
+- echo 'twitter_consumer_key = foo' >> secrets.cfg
+- echo 'twitter_consumer_secret = bar' >> secrets.cfg
+- echo 'twitter_access_token = whiz' >> secrets.cfg
+- echo 'twitter_access_token_secret = bang' >> secrets.cfg
+- echo 'twitter_api_env = proddy' >> secrets.cfg
+- echo 'bot_account_id_str = 1017142357932769280' >> secrets.cfg
+- echo '' >> secrets.cfg
+- echo '[local]' >> secrets.cfg
+- echo 'db_host = localhost' >> secrets.cfg
 env:
   global:
-    - PIPENV_VERBOSITY=-1
-
+  - PIPENV_VERBOSITY=-1
 script:
-  - make test
-
+- make test
 after_success:
-  - coveralls
+- coveralls
+before_install:
+- openssl aes-256-cbc -K $encrypted_2e58cba46dd8_key -iv $encrypted_2e58cba46dd8_iv
+  -in zappa_settings.json.enc -out zappa_settings.json -d
+- openssl aes-256-cbc -K $encrypted_2e58cba46dd8_key -iv $encrypted_2e58cba46dd8_iv
+  -in secrets.cfg.enc -out secrets.cfg -d
+after_success:
+- test $TRAVIS_BRANCH = “master” && zappa update
