--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,5 @@ after_success:
 - test $TRAVIS_BRANCH = “master” && zappa update
 before_install:
 - openssl aes-256-cbc -K $encrypted_2e58cba46dd8_key -iv $encrypted_2e58cba46dd8_iv
-  -in zappa_settings.json.enc -out zappa_settings.json -d
-- openssl aes-256-cbc -K $encrypted_2e58cba46dd8_key -iv $encrypted_2e58cba46dd8_iv
-  -in secrets.cfg.enc -out secrets.cfg -d
+  -in secrets.tar.enc -out secrets.tar -d
+- tar xvf secrets.tar
