--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,4 @@ after_success:
 - test $TRAVIS_BRANCH = “master” && zappa update prod
 before_install:
 - openssl aes-256-cbc -K $encrypted_2e58cba46dd8_key -iv $encrypted_2e58cba46dd8_iv
-  -in secrets.tar.enc -out secrets.tar -d
-- tar xvf secrets.tar
+  -in zappa_settings.json.enc -out zappa_settings.json -d
